--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "English Grammar Rules",
-    "short_name": "Grammar Rules",
+    "name": "GrowLish - English Grammar Rules",
+    "short_name": "GrowLish",
     "description": "A comprehensive collection of English grammar rules, irregular verbs, phrasal verbs, and prepositions with examples and translations.",
     "start_url": "/rules/",
     "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#ffffff",
+    "background_color": "#000000",
+    "theme_color": "#000000",
     "orientation": "portrait-primary",
     "scope": "/rules/",
     "lang": "en",
