--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
     "description": "A comprehensive collection of English grammar rules, irregular verbs, phrasal verbs, and prepositions with examples and translations.",
     "start_url": "/rules/",
     "display": "standalone",
-    "background_color": "#000000",
-    "theme_color": "#000000",
+    "background_color": "#0b1021",
+    "theme_color": "#0b1021",
     "orientation": "portrait-primary",
     "scope": "/rules/",
     "lang": "en",
